# BallFighter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  index.md  vcpkg.json
cmake/: data.cmake
core/: CMakeLists.txt
core/include/engine/: component.h  engine.h  entity.h  globals.h  system.h  transform.h
core/include/graphics/: graphics.h  sprite.h
core/include/maths/: angle.h  basic.h  vec2.h
core/include/utils/: action_utility.h  conversion.h
core/src/engine/: engine.cpp  entity.cpp  transform.cpp
core/src/graphics/: sprite.cpp
core/src/maths/: vec2.cpp
core/src/utils/: log.cpp
core/test/: test_angle.cpp  test_entity.cpp
game/: CMakeLists.txt
game/include/game/: bullet_manager.h  game_globals.h  game_manager.h  physics_manager.h  player_character.h  rollback_manager.h  star_background.h
game/include/network/: client.h  client_debug_app.h  full_debug_app.h  network_client.h  network_server.h  packet_type.h  server.h  simulation_client.h  simulation_server.h
game/src/game/: bullet_manager.cpp  game_manager.cpp  physics_manager.cpp  player_character.cpp  rollback_manager.cpp  star_background.cpp
game/src/network/: client.cpp  client_debug_app.cpp  full_debug_app.cpp  network_client.cpp  network_server.cpp  server.cpp  simulation_client.cpp  simulation_server.cpp
main/: CMakeLists.txt  client.cpp  debug.cpp  debug_client.cpp  server.cpp
